disallow-host-process/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: disallow-host-process-deployment
  namespace: demo
  labels:
    app: nginx
spec:
  replicas: 5
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      securityContext:
        windowsOptions:
          hostProcess: true
      containers:
        - name: nginx
          image: nginx:1.14.2
          ports:
            - containerPort: 80
